<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="app_name">市一导诊机器人</string>
    <string name="robot_init">机器人初始化</string>
    <string name="net_starting">第①步:\n正在连接服务器...</string>
    <string name="net_success">第①步:\n连接服务器成功</string>
    <string name="net_fail">第①步:\n连接服务器失败</string>
    <string name="ros_wait">第②步:\n等待机器人自检</string>
    <string name="ros_starting">第②步:\n机器人自检中...</string>
    <string name="ros_success">第②步:\n机器人自检成功</string>
    <string name="ros_fail">第②步:\n机器人自检失败</string>
    <string name="voice_wait">第③步:\n等待连接语音平台</string>
    <string name="voice_starting">第③步:\n连接语音平台中...</string>
    <string name="voice_success">第③步:\n连接语音平台成功</string>
    <string name="voice_fail">第③步:\n连接语音平台失败</string>
    <string name="register_result_done">恭喜您,\t脸部登记成功!</string>
    <string name="register_result_failure">抱歉,\t脸部登记失败</string>
    <string name="ic_signal">信号</string>
    <string name="battery_60">10%</string>
    <string name="version">版本号 V1.0.0</string>
    <string name="version_first">V </string>
    <string name="location">儿童医学中心-呼吸科</string>
    <string name="robot_name">XX号机器人</string>
    <string name="robot_bluetooth_title">连接设备</string>
    <string name="unsuppert">暂未支持</string>
    <string name="unset_map">地图尚未设置</string>
    <string name="show_t1">Hi，您可以叫我小白，请问我有什么可以帮助您的吗？</string>
    <string name="retry_bt_text">重试</string>
    <string name="register_bt_text">随行人员登记</string>
    <string name="link_server">连接服务器</string>
    <string name="link_robot">机器人自检</string>
    <string name="link_voice">连接语音平台</string>
    <string name="dialog_progress_show_content">正在识别中,请稍后...</string>
    <string name="update_title">软件版本更新</string>
    <string name="update_msg">检测到新版本! 正在升级,请稍后...</string>
    <string name="update_wait">等待..</string>
    <string name="sure_bt_text">确认</string>
    <string name="low_charge_title">低电量</string>
    <string name="low_charge_msg">电量不足!请及时充电!</string>
    <string name="low_charge_voice">护士姐姐，我快没电了，请帮我充电！</string>
    <string name="low_charge_go">去充电</string>
    <string name="def_department">--科</string>
    <string name="register_prompt_text">把脸完整移入框内,确认无误后,点击\"确认\"按钮.</string>
    <string name="mic">麦克风</string>
    <string name="callup">挂断</string>
    <string name="controll_mode">控制模式</string>
    <string name="drag_mode">拖动模式</string>
    <string name="agora_app_id">8261ac1c92f342caaf9ab170ca885799</string>
    <string name="volume">音量</string>
    <string name="positive">确认</string>
    <string name="negative">取消</string>
    <string name="chargereminder">当前电量低于20%，我要去充电了</string>
    <string name="title_note">注意</string>
    <string name="auto_recharge">自动回充</string>
    <string name="auto_mission">自主宣教</string>
    <string name="prompt_no_task">该任务我不会哦，请联系管理员大大给我配置吧。</string>
    <string name="wear_equipment">穿戴设备</string>
    <string name="bluetooth_connection_device">蓝牙连接设备</string>
    <string name="auscaltation">远程听诊</string>
    <string name="home_go_title">我要去...</string>
    <string name="home_question_title">常见问题</string>
    <string name="home_introduction_title">院区介绍</string>
    <string name="setup_module_title">DoctorFace 设置</string>
    <string name="answer_yes">是</string>
    <string name="answer_no">否</string>
    <string name="switch_chinese_english">中英文切换</string>
    <string name="reception_area_title">挂号处</string>
    <string name="nurse_desk_title">护士台</string>
    <string name="pharmacy_title">药房</string>
    <string name="restroom_title">洗手间</string>
    <string name="home_prompt_text">您好，我是小灰，很高兴为您服务。我可以为您带路有什么不懂的也可以问我哦。</string>
    <string name="common_problem_title">常见问题</string>
    <string name="prompt_no_navigation">该地点不在我设定位置里,可以说个我知道的地点带您去哦。</string>
    <string name="emergency_click_prompt">抱歉我的急停按钮已启动，无法执行该任务。</string>
    <string name="prompt_problem_has_no">该问题我不知道呢,可以换个问题吗。</string>
    <string name="prompt_task_exception">当前任务出现异常。</string>
    <string name="ask_for_help_text">护士姐姐，请帮帮我。</string>
    <string name="start_chose_destination_tip_one">您现在要去\t</string>
    <string name="start_chose_destination_tip_two">\t吗?\t点击\t\"是\"\t我会带您过去哦</string>
    <string name="navigation_success_tip_one">我已到达\t\t</string>
    <string name="navigation_success_tip_two">\t\t是否还需要其他服务?</string>
    <string name="start_chose_destination_dialog_title">提示</string>
    <string name="task_terminated_title">任务已终止</string>
    <string name="need_yes_title">需要</string>
    <string name="need_no_title">不需要</string>
    <string name="arrive_destination_prompt_one">已到</string>
    <string name="arrive_destination_prompt_two">啦，是否还需要其他服务呢，如不需要请点击"不需要"让我回去吧。</string>
    <string name="start_navigation_tip_one">我要去\t</string>
    <string name="start_navigation_tip_two">\t啦</string>
    <string name="charge_success_tip">充电成功</string>
    <string name="charge_failed_tip">充电失败，未扫描到充电桩!</string>
    <string name="navigation_failed_tip_one">抱歉，我无法到达</string>
    <string name="navigation_failed_tip_two">!</string>
    <string name="go_back_tip">我要回去了</string>
    <string name="charging_prompt">我正在自动回充中!</string>
    <string name="prompt_while_busy">抱歉，机器人当前正在忙碌中，请稍后。。。</string>
    <string name="arrive_destination_prompt_three">是否还需要其他服务呢?</string>
    <string name="introduction_list_title">院区介绍</string>
    <string name="booting_title">导航中</string>
    <string name="navigation_title">引导中</string>
    <string name="end_boot_bt">结束引导</string>
    <string name="no_data_title">暂无内容</string>
    <string name="emergency_click_recharge_tip">急停按钮已启动无法自动回充。</string>
    <string name="tip_recharge_tip_content">我要回去冲电了。</string>
    <string name="battery_low_tip">当前电量低于20%,我要去充电了.</string>
    <string name="termination_bt_text">终止</string>
    <string name="prompt_enter_password">请输入机器人登录密码</string>
    <string name="prompt_password_wrong">密码错误,请重新输入.</string>
    <string name="prompt_password_title">请输入密码</string>
    <string name="prompt_common_problem">我可以帮您解答问题哦.</string>
    <string name="no_en_file_tip">服务端请配置英文文件.</string>
    <string name="end_play_video_bt">结束放映</string>
    <string name="empty_free_operation">请选择</string>
    <string name="no_english_map_tip">请配置英文地图</string>
    <string name="take_charge_tip">护士姐姐，请帮帮我，带我去充电。</string>
    <string name="english_navigation_tip">请补充英文导航点信息。</string>
    <string name="charging_tip">正在充电中。</string>
    <string name="loading_title">加载中</string>
</resources>
