<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/confirm_cancel_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_note"
        android:textColor="@color/black"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/confirm_cancel_dialog_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:text="@string/battery_low_tip"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_cancel_dialog_title" />


    <RadioGroup
        android:id="@+id/radiogroup_confirm_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_cancel_dialog_content">

        <RadioButton
            android:id="@+id/check_confirm_bt"
            android:layout_width="50dp"
            android:layout_height="18dp"
            android:background="@drawable/prompt_termination_bt"
            android:button="@null"
            android:gravity="center"
            android:text="@string/positive"
            android:textSize="10sp" />

        <RadioButton
            android:id="@+id/check_cancel_bt"
            android:layout_width="50dp"
            android:layout_height="18dp"
            android:background="@drawable/prompt_termination_bt"
            android:button="@null"
            android:gravity="center"
            android:text="@string/negative"
            android:textSize="10sp" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>