<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/count_down_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_note"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/count_down_dialog_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:gravity="center"
        android:text="@string/battery_low_tip"
        android:textColor="@color/color_666666"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/count_down_dialog_title" />

    <Button
        android:id="@+id/cancel_self_bt"
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/count_down_cancel"
        android:text="@string/negative"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/count_down_dialog_content" />
</androidx.constraintlayout.widget.ConstraintLayout>